syntax = "proto3";
import "github.com/jtremback/upc/wire/wire.proto";

package peer;


message Channel {
  bytes channelID = 1;

  wire.OpeningTx openingTx = 2;
  wire.Envelope openingTxEnvelope = 3;

  wire.UpdateTx lastUpdateTx = 4;
  wire.Envelope lastUpdateTxEnvelope = 5;

  wire.UpdateTx lastFullUpdateTx = 6;
  wire.Envelope lastFullUpdateTxEnvelope = 7;

  uint32 me = 8;

  enum State {
    PendingOpen = 0;
    Open = 1;
    PendingClosed = 2;
    Closed = 3;
  }
  State state = 9;
  Identity identity1 = 10;
  Identity identity2 = 11;
}

message Identity {
  string name = 1;
  bytes pubkey = 2;
  bytes privkey = 3;
  repeated bytes channels = 4;
}